argocd/30-platform/gateway.app.yaml
"apiVersion": "gateway.networking.k8s.io/v1"
"kind": "Gateway"
"metadata":
  "annotations":
    "alb.ingress.kubernetes.io/certificate-arn": "arn:aws:acm:us-east-1:823899318117:certificate/f44c21c2-e4c0-4917-9faf-e7159d91747d"
    "alb.ingress.kubernetes.io/ssl-redirect": "443"
    "annotations":
      "argocd.argoproj.io/sync-wave": "30"
  "name": "public-gw"
  "namespace": "gateway-system"
"spec":
  "gatewayClassName": "aws-alb"
  "infrastructure":
    "parametersRef":
      "group": "gateway.k8s.aws"
      "kind": "LoadBalancerConfiguration"
      "name": "public-alb"
  "listeners":
  - "allowedRoutes":
      "namespaces":
        "from": "All"
    "name": "http"
    "port": 80
    "protocol": "HTTP"
  - "allowedRoutes":
      "namespaces":
        "from": "All"
    "name": "https"
    "port": 443
    "protocol": "HTTPS"
